--- a/views/manager/users.ejs
+++ b/views/manager/users.ejs
@@ -127,7 +127,17 @@
 						<li><a href="/config"><i class="fa fa-circle-o"></i> User Permissions</a></li>
 					</ul>
 				</li>
-				
+				<li class="treeview">
+					<a href="#">
+						<i class="fa fa-edit"></i> <span>Logs</span>
+						<span class="pull-right-container">
+							<i class="fa fa-angle-left pull-right"></i>
+						</span>
+					</a>
+					<ul class="treeview-menu">
+						<li><a href="/log/all"><i class="fa fa-circle-o"></i>All Logs</a></li>
+					</ul>
+				</li>
 				<li class="header">LABELS</li>
 				<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
 				<li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
@@ -455,7 +465,7 @@
 		// $("#example2").DataTable();
 		$('#example1').DataTable({
 			"paging": true,
-			"lengthChange": false,
+			"lengthChange": true,
 			"searching": true,
 			"ordering": true,
 			"info": true,
