--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -46,9 +46,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/app/#!/bai-dang">Quản lý mẫu vật</a></li>
-						<li><a href="/config">Cài đặt</a></li>
-						<li><a href="/admin">Admin</a></li>
-						<li><a href="/manager">Manager</a></li>
+						<li><a href="/admin">Quản lý tài khoản</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
