--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -1,6 +1,16 @@
 <script src="/javascripts/FileSaver.js"></script>
 <div class="container-fluid">
-	<center><h2>Các mẫu vật đã đăng</h2></center>		
+	<div id="download-progress-bar-container" style="margin-bottom: 10px; margin-top: 20px; margin-left: 0px; display: none">
+		<div class="container" style="padding-left: 0px;">
+			
+			<div class="progress">
+				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%" id="download-progress-bar">
+					70%
+				</div>
+			</div>
+		</div>
+	</div>
+	<center><h2>Các mẫu vật đã đăng</h2></center>
 	<table id="managerpost" class="table table-hover">
 		<div class="dropdown" style="margin-left: 15px;">
 			<button class="btn btn-info" style="margin-bottom: 10px; width: 300px;">Trích xuất file <b class="caret"></b></button>
