--- a/views/manager/logs.ejs
+++ b/views/manager/logs.ejs
@@ -32,7 +32,7 @@
 
 	<header class="main-header">
 		<!-- Logo -->
-		<a href="/admin/index2.html" class="logo">
+		<a href="/admin" class="logo">
 			<!-- mini logo for sidebar mini 50x50 pixels -->
 			<span class="logo-mini"><b>M</b></span>
 			<!-- logo for regular state and mobile devices -->
