--- a/views/alte-left-sidebar.ejs
+++ b/views/alte-left-sidebar.ejs
@@ -47,7 +47,18 @@
 						<li class=" <%= (sidebar.active == 'all-log') ? 'active' : '' %>"><a href="/log/all"><i class="fa fa-circle-o"></i>Tất cả nhật ký</a></li>
 					</ul>
 				</li>
-				
+				<li class="treeview <%= (sidebar.active == 'statistic') ? 'active' : '' %>">
+					<a href="#">
+						<i class="fa fa-edit"></i> <span>Thống kê</span>
+						<span class="pull-right-container">
+							<i class="fa fa-angle-left pull-right"></i>
+						</span>
+					</a>
+					<ul class="treeview-menu">
+						<li class=" <%= (sidebar.active == 'statistic') ? 'active' : '' %>"><a href="/manager/statistic"><i class="fa fa-circle-o"></i>Thống kê mẫu vật theo đề tài</a></li>
+					</ul>
+				</li>
+
 				<li class="header">NHÃN</li>
 				<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Quan trọng</span></a></li>
 				<li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Cảnh báo</span></a></li>
