--- a/views/manager/logs.ejs
+++ b/views/manager/logs.ejs
@@ -61,13 +61,13 @@
 		<!-- Content Header (Page header) -->
 		<section class="content-header">
 			<h1>
-				Manager Dashboard
+				Lịch sử hoạt động
 				
 			</h1>
 			<ol class="breadcrumb">
-				<li><a href="/home"><i class="fa fa-dashboard"></i> Home</a></li>
-				<li><a href="/manager">Manager</a></li>
-				<li class="active">Users Management</li>
+				<li><a href="/home"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
+				<li><a href="/manager">Quản trị</a></li>
+				<li class="active">Quản lý tài khoản</li>
 			</ol>
 		</section>
 
@@ -80,7 +80,7 @@
 
 					<div class="box">
 						<div class="box-header">
-							<h3 class="box-title">Users in this team</h3>
+							<h3 class="box-title">Toàn bộ lịch sử</h3>
 						</div>
 						<!-- /.box-header -->
 						<div class="box-body">
