--- a/views/lockscreen.ejs
+++ b/views/lockscreen.ejs
@@ -46,7 +46,7 @@
         <input type="password" name="password" id="password" class="form-control" placeholder="password">
         <input type="hidden" name="redirectBack" id="redirectBack">
         <div class="input-group-btn">
-          <button type="button" class="btn"><i class="fa fa-arrow-right text-muted"></i></button>
+          <button type="submit" class="btn"><i class="fa fa-arrow-right text-muted"></i></button>
         </div>
       </div>
     </form>
