--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -78,7 +78,7 @@
 					
 					<!-- /.box -->
 
-					<div class="box">
+					<div class="box box-primary">
 						<div class="box-header">
 							<h3 class="box-title">Tất cả nhân viên trong hệ thống</h3>
 						</div>
