--- a/views/alte-left-sidebar.ejs
+++ b/views/alte-left-sidebar.ejs
@@ -35,7 +35,24 @@
 						<li class=" <%= (sidebar.active == 'users') ? 'active' : '' %>"><a href="/admin/users"><i class="fa fa-circle-o"></i>Cấp bậc tài khoản</a></li>
 						<li class=" <%= (sidebar.active == 'config') ? 'active' : '' %>"><a href="/config"><i class="fa fa-circle-o"></i>Phân quyền</a></li>
 					</ul>
+					<!--
+					<ul class="treeview-menu <%= (sidebar.active == 'config') ? 'active' : '' %>">
+						<li class=" <%= (sidebar.active == 'users') ? 'active' : '' %>"><a href="/admin/users"><i class="fa fa-circle-o"></i>Cấp bậc tài khoản</a></li>
+						</a></li>
+						<li class=" <%= (sidebar.active == 'config') ? 'active' : '' %>">
+							<a href="/config"><i class="fa fa-circle-o"></i> Phân quyền
+								<span class="pull-right-container">
+									<i class="fa fa-angle-left pull-right"></i>
+								</span>
+							</a>
+							<ul class="treeview-menu <%= (sidebar.active == 'config') ? 'active' : '' %>">
+								<li onclick="document.getElementById('btnCollapseUsers').click()"><a href="#"><i class="fa fa-circle-o"></i> Phân quyền user</a></li>
+								<li onclick="document.getElementById('btnCollapseUsers').click()"><a href="#"><i class="fa fa-circle-o"></i> Quản lý quyền</a></li>
+							</ul>
+						</li>
+					</ul> -->
 				</li>
+
 				<li class="treeview <%= (sidebar.active == 'all-log') ? 'active' : '' %>">
 					<a href="#">
 						<i class="fa fa-edit"></i> <span>Nhật ký</span>
