--- a/views/lockscreen.ejs
+++ b/views/lockscreen.ejs
@@ -43,7 +43,7 @@
     <form class="lockscreen-credentials" method="post" onsubmit="handleSubmit()">
       <input type="hidden" name="email" value="<%= oldUser.username %>">
       <div class="input-group">
-        <input type="password" name="password" id="password" class="form-control" placeholder="password">
+        <input type="password" name="password" id="password" class="form-control" placeholder="Mật khẩu">
         <input type="hidden" name="redirectBack" id="redirectBack">
         <div class="input-group-btn">
           <button type="submit" class="btn"><i class="fa fa-arrow-right text-muted"></i></button>
@@ -55,7 +55,7 @@
   </div>
   <!-- /.lockscreen-item -->
   <div class="help-block text-center">
-    Nhập mật khẩu để đăng nhập
+    
   </div>
   <div class="text-center">
     <a href="/auth/notme">Đăng nhập bằng tài khoản khác</a>
